[package]
name = "fusedis"
version = "0.1.0"
homepage = "https://github.com/roganartu/fusedis"
authors = ["Tony Lykke <hi@tonylykke.com>"]
edition = "2018"

[dependencies]
fuser = "0.8"
quicli = "0.4"
structopt = "0.2"
libc = "0.2"
env_logger = "0.8"
human-panic = "1.0.3"
redis = { version = "0.20.1", features = ["cluster", "tls"] }
