[package]
name = "fusekv"
description = "FUSE key/value store backed by Redis"
version = "0.1.0"
homepage = "https://github.com/roganartu/fusekv"
authors = ["Tony Lykke <hi@tonylykke.com>"]
edition = "2018"

[dependencies]
fuser = "0.8"
quicli = "0.4"
structopt = "0.3"
libc = "0.2"
log = "0.4"
env_logger = "0.8"
human-panic = "1.0.3"
redis = { version = "0.20.1", features = ["cluster", "tls", "r2d2"] }
redis-lua = "0.4"
r2d2_redis = "0.14.0"
r2d2_redis_cluster = "0.1.6"
toml = "0.5"
url = { version = "2.2", features = ["serde"] }
quick-error = "2.0"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.12", features = ["derive"] }
whoami = "1.1"
